--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="dns-prefetch" href="https://jaakkolee.github.io">
   <title>Jaakko的博客</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="平顶山学院12级，网络工程师。PHP开发工程师，擅长各项前端技能，深入研究后端开发与前端交互性能。">
+  <meta name="description" content="PHP开发工程师，擅长各项前端技能，深入研究后端开发与前端交互性能。">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Jaakko的博客">
 <meta property="og:url" content="https://jaakkolee.github.io/index.html">
 <meta property="og:site_name" content="Jaakko的博客">
-<meta property="og:description" content="平顶山学院12级，网络工程师。PHP开发工程师，擅长各项前端技能，深入研究后端开发与前端交互性能。">
+<meta property="og:description" content="PHP开发工程师，擅长各项前端技能，深入研究后端开发与前端交互性能。">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Jaakko的博客">
-<meta name="twitter:description" content="平顶山学院12级，网络工程师。PHP开发工程师，擅长各项前端技能，深入研究后端开发与前端交互性能。">
+<meta name="twitter:description" content="PHP开发工程师，擅长各项前端技能，深入研究后端开发与前端交互性能。">
   
     <link rel="alternative" href="/atom.xml" title="Jaakko的博客" type="application/atom+xml">
   
@@ -515,5 +515,6 @@
 
 </div>
   </div>
+	<div>< a href="http://www.beian.miit.gov.cn">豫ICP备18035390号</ a></div>
 </body>
 </html>
