--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
   <div class="outer">
     <div id="footer-info">
     	<div class="footer-left">
-    		&copy; 2017 Jaakko <div><a href="http://www.beian.miit.gov.cn">豫ICP备18035390号</a></div>
+    		&copy; 2017 Jaakko <div><a href="http://www.beian.miit.gov.cn">豫ICP备18035390号-2</a></div>
     	</div>
       	<div class="footer-right">
       		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
